public/lite/api/zh-CN/r1.7/_sources/generate/file_include_text.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_text.h:

File text.h
===========

|exhale_lsh| :ref:`Parent directory <dir_include>` (``include``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/text.h``)
-------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_text.h.rst





Includes
--------


- ``include/api/dual_abi_helper.h``

- ``include/api/status.h``

- ``include/dataset/constants.h``

- ``include/dataset/transforms.h``

- ``memory``

- ``optional``

- ``string``

- ``unordered_map``

- ``utility``

- ``vector``






Namespaces
----------


- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__dataset`

- :ref:`namespace_mindspore__dataset__text`


Classes
-------


- :ref:`exhale_class_classmindspore_dataset_SentencePieceVocab`

- :ref:`exhale_class_classmindspore_dataset_text_BasicTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_BertTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_CaseFold`

- :ref:`exhale_class_classmindspore_dataset_text_FilterWikipediaXML`

- :ref:`exhale_class_classmindspore_dataset_text_JiebaTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_Lookup`

- :ref:`exhale_class_classmindspore_dataset_text_Ngram`

- :ref:`exhale_class_classmindspore_dataset_text_NormalizeUTF8`

- :ref:`exhale_class_classmindspore_dataset_text_RegexReplace`

- :ref:`exhale_class_classmindspore_dataset_text_RegexTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_SentencePieceTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_SlidingWindow`

- :ref:`exhale_class_classmindspore_dataset_text_ToNumber`

- :ref:`exhale_class_classmindspore_dataset_text_ToVectors`

- :ref:`exhale_class_classmindspore_dataset_text_TruncateSequencePair`

- :ref:`exhale_class_classmindspore_dataset_text_UnicodeCharTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_UnicodeScriptTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_WhitespaceTokenizer`

- :ref:`exhale_class_classmindspore_dataset_text_WordpieceTokenizer`

- :ref:`exhale_class_classmindspore_dataset_Vocab`


Typedefs
--------


- :ref:`exhale_typedef_mindspore_dataset_WordIdType-1`

- :ref:`exhale_typedef_mindspore_dataset_WordType-1`

